# Chat_With_DB

./: .gitignore  DB_Mongo.py  DB_Postgres.py  agent.py  chatbot_config.py  conversationModule.py  database_agent.py  db_mongo_version.py  debug_llm_mongo_schema.txt  index.html  main.py  main_agent.py  pyproject.toml  req.txt  schema.txt  server.py
